Bradken/force-app/main/default/objects/Wrike_Task__c/Wrike_Task__c.object-meta.xml
<CustomObject>
    <label>Wrike Task</label>
    <nameField>
        <label>Wrike Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wrike Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>