Bradken/force-app/main/default/objects/Wrike_Task__c/fields/Based_on_Existing_Drawings__c.field-meta.xml
<CustomField>
    <fullName>Based_on_Existing_Drawings__c</fullName>
    <description>Integrated with Wrike via Jitterbit</description>
    <inlineHelpText>Please list any drawings this work is based on.</inlineHelpText>
    <label>Based on Existing Drawings?</label>
    <type>TextArea</type>
</CustomField>