Bradken/force-app/main/default/objects/Wrike_Task__c/fields/Machine_Size_Equipment_Designation__c.field-meta.xml
<CustomField>
    <fullName>Machine_Size_Equipment_Designation__c</fullName>
    <description>Integrated with Wrike via Jitterbit</description>
    <inlineHelpText>What machine is this for, e.g. 40&apos; SAG Mill, CV201 Deflector etc?</inlineHelpText>
    <label>Machine Size/Equipment Designation</label>
    <type>TextArea</type>
</CustomField>