Bradken/force-app/main/default/objects/Wrike_Task__c/fields/MinPro_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>MinPro_Product_Line__c</fullName>
    <description>Integrated with Wrike via Jitterbit</description>
    <label>MinPro Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mills</fullName>
            </value>
            <value>
                <fullName>Crushers</fullName>
            </value>
            <value>
                <fullName>Chutes</fullName>
            </value>
            <value>
                <fullName>Wear Piping</fullName>
            </value>
            <value>
                <fullName>Vertical Grinding Mills</fullName>
            </value>
            <value>
                <fullName>Coal Breaker</fullName>
            </value>
            <value>
                <fullName>Pumps</fullName>
            </value>
            <value>
                <fullName>Misc/Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>