Bradken/force-app/main/default/objects/Wrike_Task__c/fields/Reason_for_Work__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Work__c</fullName>
    <description>Integrated with Wrike via Jitterbit</description>
    <inlineHelpText>Please provide any background information about this job, why is it needed etc.</inlineHelpText>
    <label>Reason for Work?</label>
    <type>TextArea</type>
</CustomField>