Bradken/force-app/main/default/objects/Wrike_Task__c/fields/Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Date__c</fullName>
    <description>Integrated with Wrike via Jitterbit</description>
    <inlineHelpText>Is the start date of the Wrike task</inlineHelpText>
    <label>Requested Date</label>
    <type>Date</type>
</CustomField>