Bradken/force-app/main/default/objects/Wrike_Task__c/fields/Scope_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Scope_of_Work__c</fullName>
    <description>Integrated with Wrike via Jitterbit</description>
    <label>Scope of Work</label>
    <type>TextArea</type>
</CustomField>