Bradken/force-app/main/default/objects/Wrike_Task__c/fields/Trigger_Wrike_Task_API__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Wrike_Task_API__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to TRUE by flow that creates a Wrike Task or manually through update action. This then triggers the outbound message flow to send the data to Jitterbit to either create a new task or retrieve a status update for an existing</description>
    <inlineHelpText>Set to TRUE by flow that creates a Wrike Task or retrieve an update from Wrike</inlineHelpText>
    <label>Trigger Wrike Task API</label>
    <type>Checkbox</type>
</CustomField>