Bradken/force-app/main/default/objects/Wrike_Task__c/fields/Wrike_Integration_Error__c.field-meta.xml
<CustomField>
    <fullName>Wrike_Integration_Error__c</fullName>
    <description>Integrated error message from Wrike API. Updated via Jitterbit</description>
    <inlineHelpText>Integrated error message from Wrike API</inlineHelpText>
    <label>Wrike Integration Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>