Bradken/force-app/main/default/objects/Wrike_Task__c/fields/Wrike_Integration_Error_Description__c.field-meta.xml
<CustomField>
    <fullName>Wrike_Integration_Error_Description__c</fullName>
    <description>Integrated error description from Wrike API. Updated via Jitterbit</description>
    <inlineHelpText>Integrated error description from Wrike API</inlineHelpText>
    <label>Wrike Integration Error Description</label>
    <type>TextArea</type>
</CustomField>