Bradken/force-app/main/default/objects/Wrike_Task__c/fields/Wrike_Last_Queried_Date__c.field-meta.xml
<CustomField>
    <fullName>Wrike_Last_Queried_Date__c</fullName>
    <description>Date/time of when Wrike was last queried. Updated from Jitterbit daily</description>
    <inlineHelpText>Date/time of when Wrike was last queried</inlineHelpText>
    <label>Wrike Last Queried Date</label>
    <type>DateTime</type>
</CustomField>