Bradken/force-app/main/default/objects/Wrike_Task__c/fields/Wrike_Last_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Wrike_Last_Updated_Date__c</fullName>
    <description>Date/time the  Wrike Task Status was updated to a different value. Updated viaJitterbit</description>
    <inlineHelpText>Date/time the Wrike Task Status was updated to a different value.</inlineHelpText>
    <label>Wrike Last Updated Date</label>
    <type>DateTime</type>
</CustomField>