Bradken/force-app/main/default/objects/Wrike_Task__c/fields/Wrike_Project_Folder_ID__c.field-meta.xml
<CustomField>
    <fullName>Wrike_Project_Folder_ID__c</fullName>
    <description>Updated via flow to create Wrike Task</description>
    <label>Wrike Project Folder ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>