Bradken/force-app/main/default/objects/Wrike_Task__c/fields/Wrike_Query_Count__c.field-meta.xml
<CustomField>
    <fullName>Wrike_Query_Count__c</fullName>
    <description>Number of times the Wrike Task has been queried for an update. Updated via Jitterbit</description>
    <inlineHelpText>Number of times the Wrike Task has been queried for an update.</inlineHelpText>
    <label>Wrike Query Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>