Bradken/force-app/main/default/objects/Wrike_Task__c/fields/Wrike_Task_API_ID__c.field-meta.xml
<CustomField>
    <fullName>Wrike_Task_API_ID__c</fullName>
    <description>Unique Wrike API Task ID used for retrieving Wrike Task status updates. Updated via Jitterbit</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique Wrike API Task ID used for retrieving Wrike Task status updates</inlineHelpText>
    <label>Wrike Task API ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>