Bradken/force-app/main/default/objects/Wrike_Task__c/fields/Wrike_Task_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Wrike_Task_Created_Date__c</fullName>
    <description>Date/time the Wrike Task was created. Updated via Jitterbit</description>
    <inlineHelpText>Date/time the Wrike Task was created.</inlineHelpText>
    <label>Wrike Task Created Date</label>
    <type>DateTime</type>
</CustomField>