Bradken/force-app/main/default/objects/Wrike_Task__c/fields/Wrike_Task_Description__c.field-meta.xml
<CustomField>
    <fullName>Wrike_Task_Description__c</fullName>
    <description>Concatenated Wrike Task information captured in flow and integrated with Wrike via Jitterbit</description>
    <label>Wrike Task Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>