Bradken/force-app/main/default/objects/Wrike_Task__c/fields/Wrike_Task_Responsibles__c.field-meta.xml
<CustomField>
    <fullName>Wrike_Task_Responsibles__c</fullName>
    <description>Wrike Contact ID of the users that a responsible for the task. Updated via flow from CMDT table</description>
    <label>Wrike Task Responsibles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>