Bradken/force-app/main/default/objects/Wrike_Task__c/fields/Wrike_Task_Status__c.field-meta.xml
<CustomField>
    <fullName>Wrike_Task_Status__c</fullName>
    <description>Updated via Jitterbit on a nightly basis</description>
    <inlineHelpText>Wrike Task Status that is updated from Wrike on a daily basis</inlineHelpText>
    <label>Wrike Task Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IEACEUCHJMAAAAAA</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>IEACEUCHJMAQIDSC</fullName>
                <label>Requested</label>
            </value>
            <value>
                <fullName>IEACEUCHJMATQ6Z4</fullName>
                <label>Allocated</label>
            </value>
            <value>
                <fullName>IEACEUCHJMATQ62G</fullName>
                <label>In progress</label>
            </value>
            <value>
                <fullName>IEACEUCHJMATQ62Q</fullName>
                <label>Waiting on others</label>
            </value>
            <value>
                <fullName>IEACEUCHJMBSB626</fullName>
                <label>Awaiting Drawing Approvals</label>
            </value>
            <value>
                <fullName>IEACEUCHJMBV53QK</fullName>
                <label>Submitted Team Centre W/Flow</label>
            </value>
            <value>
                <fullName>IEACEUCHJMAAAAAB</fullName>
                <label>Completed</label>
            </value>
            <value>
                <fullName>IEACEUCHJMAAAAAC</fullName>
                <label>On Hold</label>
            </value>
            <value>
                <fullName>IEACEUCHJMAAAAAD</fullName>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>Active</fullName>
                <isActive>false</isActive>
                <label>Active</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>