Bradken/force-app/main/default/objects/Wrike_Task__c/fields/Wrike_Task_Title__c.field-meta.xml
<CustomField>
    <fullName>Wrike_Task_Title__c</fullName>
    <description>Wrike Task Title updated via flow from CMDT table based on Wrike Region</description>
    <label>Wrike Task Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>