Bradken/force-app/main/default/objects/Wrike_Task__c/fields/Wrike_Task_URL__c.field-meta.xml
<CustomField>
    <fullName>Wrike_Task_URL__c</fullName>
    <description>Link to the Wrike task. Updated via Jitterbit</description>
    <inlineHelpText>Link to the Wrike task</inlineHelpText>
    <label>Wrike Task URL</label>
    <type>Url</type>
</CustomField>